@@ -17,6 +17,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/info.c: fix -m1 crashing (34 chars, not 32!), and -m2 crashing under Win32.
 include/sproto.h: fix cast_change_ability definition.
 server/gods.c: fix cast_change_ability to hide the 'can't recast' message.
 server/spell_effect.c: don't stack word of recall forces. Add a 'silent' parameter
